--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     <div class="capa">
       <div class="texto-capa">
-        <h1>Música para todos</h1>
-        <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
-        <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>
+        <h1>Conteúdos sobre engenharia e inteligência artificial</h1>
+        <!--  <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
+        <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>-->
       </div>
     </div>
 
