--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         <!-- navbar -->
         <div class="collapse navbar-collapse" id="barra-navegacao">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="">Premium</a></li>
-            <li><a href="">Ajuda</a></li>
-            <li><a href="">Baixar</a></li>
+            <li><a href="">Engenharia de Sistemas</a></li>
+            <li><a href="">Inteligência Artificial</a></li>
+            <li><a href="">Matemática</a></li>
+            <li><a href="">Estatística</a></li>
+            <li><a href="">Diversos</a></li>
             <li class="divisor" role="separator"></li>
             <li><a href="">Inscrever-se</a></li>
             <li><a href="">Entrar</a></li>
