--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <li class="item-rede-social"><a href=""><img src="imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/instagram.png"></a></li>
-              <li class="item-rede-social"><a href=""><img src="imagens/linkedin.png"></a></li>
+              <li class="item-rede-social"><a href=""><img src="imagens/linkedin.jpg"></a></li>
             </ul>
           </div>
 
