--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Música para todos - Spotify</title>
+    <title>Conhecimento vicia</title>
     <link rel="icon" href="imagens/favicon.png">
 
     <!-- Bootstrap -->
@@ -200,7 +200,7 @@
               <li class="item-rede-social"><a href=""><img src="imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/instagram.png"></a></li>
-              <li class="item-rede-social"><a href=""><img src="imagens/linkedin.png"></a></li>
+              <!--<li class="item-rede-social"><a href=""><img src="imagens/linkedin.png"></a></li>-->
             </ul>
           </div>
 
