--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </div>
               <div class="col-md-6">
                 <img src="imagens/img4.jpg" class="img-responsive">
-              </div>--> -->
+              </div>-->
 
           </div>
 
@@ -196,7 +196,7 @@
             </ul>
           </div>
         -->
-          <div class="col-md-4">
+          <div class="col-md-6">
             <ul class="nav">
               <li class="item-rede-social"><a href=""><img src="imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/twitter.png"></a></li>
