--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Conhecimento vicia</title>
-    <link rel="icon" href="imagens/favicon.png">
+    <link rel="icon" href="../imagens/favicon.png">
 
     <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="estilo.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../estilo.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -60,9 +60,9 @@
 
           <div class="col-md-6">
             <ul class="nav">
-              <li class="item-rede-social"><a href=""><img src="imagens/facebook.png"></a></li>
-              <li class="item-rede-social"><a href=""><img src="imagens/twitter.png"></a></li>
-              <li class="item-rede-social"><a href=""><img src="imagens/instagram.png"></a></li>
+              <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
+              <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
+              <li class="item-rede-social"><a href=""><img src="../imagens/instagram.png"></a></li>
               <!--<li class="item-rede-social"><a href=""><img src="imagens/linkedin.png"></a></li>-->
             </ul>
           </div>
