--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <!-- navbar -->
         <div class="collapse navbar-collapse" id="barra-navegacao">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html">Início</a></li>
             <li><a href="">Engenharia de Sistemas</a></li>
             <li><a href="">Inteligência Artificial</a></li>
             <li><a href="">Matemática & Programação</a></li>
