--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -22,7 +22,7 @@
 
   <body>
 
-
+<div class="geral">
     <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
       <div class="container">
         
@@ -58,20 +58,19 @@
             <li><a href="">Entrar</a></li>
           </ul>
         </div>
-
+    <footer>
           <div class="col-md-6">
             <ul class="nav">
               <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/instagram.png"></a></li>
-              <!--<li class="item-rede-social"><a href=""><img src="imagens/linkedin.png"></a></li>-->
             </ul>
           </div>
 
-        </div><!-- /row -->
+        </div>
       </div>
     </footer>
-
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
