--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@
     <section id="servicos">
       <div class="container">
         <div class="row">
-
+    <footer>
           <div class="col-md-6">
             <ul class="nav">
               <li class="item-rede-social"><a href=""><img src="imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="imagens/instagram.png"></a></li>
-              <!--<li class="item-rede-social"><a href=""><img src="imagens/linkedin.png"></a></li>-->
             </ul>
           </div>
 
