--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -59,7 +59,7 @@
           </ul>
         </div>
           <div class="col-md-6">
-            <ul class="nav">
+            <ul class="nav redes">
               <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/instagram.png"></a></li>
