--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -58,7 +58,7 @@
             <li><a href="">Entrar</a></li>
           </ul>
         </div>
-          <div class="col-md-auto">
+          <div class="col-md-6">
             <ul class="nav">
               <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
