--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -58,14 +58,14 @@
             <li><a href="">Entrar</a></li>
           </ul>
         </div>
-          <!--<div class="col-md-6">
+          <!--<div class="col-md-6">-->
+        <footer class="page-footer font-small blue">
             <ul class="nav">
               <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/instagram.png"></a></li>
             </ul>
           </div>
-          -->
         </div>
       </div>
     </footer>
