--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -52,7 +52,7 @@
             <li><a href="">Inteligência Artificial</a></li>
             <li><a href="">Matemática & Programação</a></li>
             <li><a href="">Estatística</a></li>
-            <li><a href="paginas/diversos.html">Diversos</a></li>
+            <li><a href="../paginas/diversos.html">Diversos</a></li>
             <li class="divisor" role="separator"></li>
             <li><a href="">Inscrever-se</a></li>
             <li><a href="">Entrar</a></li>
