--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -59,12 +59,14 @@
           </ul>
         </div>
           <!--<div class="col-md-6">-->
-        <footer class="footer navbar-fixed-bottom col-md-6">
+        <footer class="footer navbar-fixed-bottom">
+           <div class="col-md-6">
             <ul class="nav">
               <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
               <li class="item-rede-social"><a href=""><img src="../imagens/instagram.png"></a></li>
             </ul>
+          </div>
          </footer>
           </div>
         </div>
