--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -20,7 +20,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body2>
 
 <div class="geral">
     <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
@@ -77,5 +77,5 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
-  </body>
+  </body2>
 </html>
