--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -19,7 +19,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
+  <div id="fundo-diversos">
   <body>
 
 <div class="geral">
@@ -78,4 +78,5 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
+  </div>
 </html>
