--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </button>
 
           <a href="index.html" class="navbar-brand">
-            <span class="img-logo">Spotify</span>
+           <!-- <span class="img-logo">Spotify</span>-->
           </a>
 
         </div>
