--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -56,6 +56,13 @@
             <li><a href="">Entrar</a></li>
           </ul>
         </div>
+        <ul class="list-group">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Morbi leo risus</li>
+            <li class="list-group-item">Porta ac consectetur ac</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+          </ul>
           <!--<div class="col-md-6">-->
         <footer class="footer navbar-fixed-bottom">
            <div class="col-md-6">
