--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -56,21 +56,23 @@
             <li><a href="">Entrar</a></li>
           </ul>
         </div>
-        <ul class="list-group">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-          </ul>
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+
+  
+  <a href="#" class="list-group-item list-group-item-action list-group-item-primary">This is a primary list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">This is a secondary list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-success">This is a success list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-danger">This is a danger list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-warning">This is a warning list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-info">This is a info list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-light">This is a light list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-dark">This is a dark list group item</a>
+</div>
           <!--<div class="col-md-6">-->
         <footer class="footer navbar-fixed-bottom">
            <div class="col-md-6">
-            <ul class="nav">
-              <li class="item-rede-social"><a href=""><img src="../imagens/facebook.png"></a></li>
-              <li class="item-rede-social"><a href=""><img src="../imagens/twitter.png"></a></li>
-              <li class="item-rede-social"><a href=""><img src="../imagens/instagram.png"></a></li>
-            </ul>
+
           </div>
          </footer>
           </div>
