--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -57,17 +57,8 @@
           </ul>
         </div>
 <div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+  <a href="classificacao-generos.html" class="list-group-item list-group-item-action">Classificação de Gêneros musicais usando Pytorch e uma rede pré treinada</a>
 
-  
-  <a href="#" class="list-group-item list-group-item-action list-group-item-primary">This is a primary list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">This is a secondary list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-success">This is a success list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-danger">This is a danger list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-warning">This is a warning list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-info">This is a info list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-light">This is a light list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-dark">This is a dark list group item</a>
 </div>
           <!--<div class="col-md-6">-->
         <footer class="footer navbar-fixed-bottom">
