--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -57,11 +57,11 @@
           </ul>
         </div>
 <div class="list-group">
-    <a href="classificacao-generos.html" class="list-group-item list-group-item-action">
+    <a href="classificacao-generos.html" class="list-group-item list-group-item-action flex-column align-items-start active">
         <div class="d-flex w-100 justify-content-between">
-            <h4>Classificação de Gêneros musicais usando Pytorch e uma rede pré treinada</h4>
+            <h5>Classificação de Gêneros musicais usando Pytorch e uma rede pré treinada</h4>
         </div>        
-        <p>O trabalho de classificação de gêneros músicais usando machine learning, até então, era feito utilizando-se os modelos rasos como Support Vector Machine, Decision Trees etc. Eram extraídos features de interesse dos sinais de áudio para arquivos tabulares como um csv e esses dados eram as entradas dos modelos citados anteriormente que fariam a classificação. Com o avanço..  </p>
+        <p class="mb-1">O trabalho de classificação de gêneros músicais usando machine learning, até então, era feito utilizando-se os modelos rasos como Support Vector Machine, Decision Trees etc. Eram extraídos features de interesse dos sinais de áudio para arquivos tabulares como um csv e esses dados eram as entradas dos modelos citados anteriormente que fariam a classificação. Com o avanço..  </p>
     </a>
    
 </div>
