--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -63,7 +63,14 @@
         </div>        
         <p class="mb-1">O trabalho de classificação de gêneros músicais usando machine learning, até então, era feito utilizando-se os modelos rasos como Support Vector Machine, Decision Trees etc. Eram extraídos features de interesse dos sinais de áudio para arquivos tabulares como um csv e esses dados eram as entradas dos modelos citados anteriormente que fariam a classificação. Com o avanço..  </p>
     </a>
-   
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small class="text-muted">3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small class="text-muted">Donec id elit non mi porta.</small>
+  </a>
 </div>
 
           <!--<div class="col-md-6">-->
