--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -61,7 +61,7 @@
         <div class="d-flex w-100 justify-content-between">
             <h3>Classificação de Gêneros musicais usando Pytorch e uma rede pré treinada</h4>
         </div>        
-        <p class="mb-1">O trabalho de classificação de gêneros músicais usando machine learning, até então, era feito utilizando-se os modelos rasos como Support Vector Machine, Decision Trees etc. Eram extraídos features de interesse dos sinais de áudio para arquivos tabulares como um csv e esses dados eram as entradas dos modelos citados anteriormente que fariam a classificação. Com o avanço..  </p>
+        <p class="mb-1">O trabalho de classificação de gêneros músicais usando machine learning, até então, era feito utilizando-se os modelos rasos como Support Vector Machine, Decision Trees etc. Eram extraídos features de interesse dos sinais de áudio para arquivos tabulares como um csv e esses dados eram as entradas dos modelos citados anteriormente que fariam a classificação. Com o avanço...  </p>
     </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
