--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -62,8 +62,8 @@
             <h3>Classificação de Gêneros musicais usando Pytorch e uma rede pré treinada</h3>
         </div>        
         <p class="mb-1">O trabalho de classificação de gêneros músicais usando machine learning, até então, era feito utilizando-se os modelos rasos como Support Vector Machine, Decision Trees etc. Eram extraídos features de interesse dos sinais de áudio para arquivos tabulares como um csv e esses dados eram as entradas dos modelos citados anteriormente que fariam a classificação. Com o avanço...  </p>
-        <ul><img src="../imagens/melrock.png" alt="MFCC"></ul>
   </a>
+    <div><img src="../imagens/melrock.png" alt="MFCC"></div>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">List group item heading</h5>
