--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -57,7 +57,7 @@
           </ul>
         </div>
 <div class="list-group">
-    <a href="classificacao-generos.html" class="list-group-item list-group-item-action flex-column align-items-start active">
+    <a href="classi.html" class="list-group-item list-group-item-action flex-column align-items-start active">
         <div class="d-flex w-100 justify-content-between">
             <h3>Classificação de Gêneros musicais usando Pytorch e uma rede pré treinada</h3>
         </div>        
