--- a/paginas/classi.html
+++ b/paginas/classi.html
@@ -13129,6 +13129,41 @@ div#notebook {
     </script>
     <!-- End of mathjax configuration --></head>
 <body>
+   <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
+      <div class="container">
+        
+        <!-- header -->
+        <div class="navbar-header">
+          
+          <!-- botao toggle -->
+          <button type="button" class="navbar-toggle collapsed"
+                  data-toggle="collapse" data-target="#barra-navegacao">
+            <span class="sr-only">alternar navegação</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <a href="index.html" class="navbar-brand">
+            <span class="img-logo">Spotify</span>
+          </a>
+
+        </div>
+
+        <!-- navbar -->
+        <div class="collapse navbar-collapse" id="barra-navegacao">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../index.html">Início</a></li>
+            <li><a href="">Engenharia de Sistemas</a></li>
+            <li><a href="">Inteligência Artificial</a></li>
+            <li><a href="">Matemática & Programação</a></li>
+            <li><a href="">Estatística</a></li>
+            <li><a href="../paginas/diversos.html">Diversos</a></li>
+            <li class="divisor" role="separator"></li>
+            <li><a href="">Inscrever-se</a></li>
+            <li><a href="">Entrar</a></li>
+          </ul>
+        </div>
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
