--- a/paginas/classi.html
+++ b/paginas/classi.html
@@ -13145,7 +13145,7 @@ div#notebook {
           </button>
 
           <a href="index.html" class="navbar-brand">
-            <span class="img-logo">Spotify</span>
+            <span class="img-logo"></span>
           </a>
 
         </div>
