--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -65,8 +65,8 @@
       <h5 class="mb-1">List group item heading</h5>
       <small class="text-muted">3 days ago</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small class="text-muted">Donec id elit non mi porta.</small>
+    <p class="mb-1">Próxima página de diversos</p>
+    <small class="text-muted">Ainda em construção</small>
   </a>
 </div>
 
