--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -51,6 +51,8 @@
             <li><a href="">Matemática & Programação</a></li>
             <li><a href="">Estatística</a></li>
             <li><a href="../paginas/diversos.html">Diversos</a></li>
+            <li><a href="../paginas/pesquisa01.htmls">Diversos</a></li>
+            
           </ul>
         </div>
 <div class="list-group">
