--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="capa">
       <div class="texto-capa">
-        <h1>Conteúdos sobre engenharia e inteligência artificial</h1>
+        <h1>Conteúdos sobre Engenharia e Inteligência Computacional</h1>
         <!--  <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
         <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>-->
       </div>
