--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -59,8 +59,8 @@
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
     </div>
-    <p class="mb-1">Próxima página de diversos</p>
-    <small class="text-muted">Ainda em construção</small>
+    <!--<p class="mb-1">Próxima página de diversos</p>
+    <small class="text-muted">Ainda em construção</small> -->
   </a>
 </div>
 
