--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <div class="collapse navbar-collapse" id="barra-navegacao">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Início</a></li>
-            <li><a href="">Engenharia de Sistemas</a></li>
-            <li><a href="">Inteligência Artificial</a></li>
-            <li><a href="">Matemática & Programação</a></li>
-            <li><a href="">Estatística</a></li>
-            <li><a href="paginas/diversos.html">Diversos</a></li>
+            <li><a href="exporta.html">Visualização 1</a></li>
+            <li><a href="importa.html">Visualização 2</a></li>
+            <li><a href="visu2">Visualização 3</a></li>
+            <li><a href="visu3">Visualização 4</a></li>
+            <!-- li><a href="paginas/diversos.html">Diversos</a></li>-->
           </ul>
         </div>
       </div><!-- /container -->
@@ -60,7 +60,7 @@
 
     <div class="capa">
       <div class="texto-capa">
-        <h1>Conteúdos sobre Engenharia e Inteligência Computacional</h1>
+        <h1>Visualizações grupo 30</h1>
         <!--  <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
         <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>-->
       </div>
