--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <!-- navbar -->
         <div class="collapse navbar-collapse" id="barra-navegacao">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="exporta.html">Visualização 1</a></li>
+           <!-- <li><a href="index.html">Início</a></li>-->
+            <li><a href="exp.html">Visualização 1</a></li>
             <li><a href="importa.html">Visualização 2</a></li>
             <li><a href="visu2">Visualização 3</a></li>
             <li><a href="visu3">Visualização 4</a></li>
